--- a/pom.xml
+++ b/pom.xml
@@ -2,12 +2,12 @@
   xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
   <modelVersion>4.0.0</modelVersion>
 
-  <groupId>org.lou</groupId>
+  <groupId>lou</groupId>
   <artifactId>jeran</artifactId>
-  <version>0.0.1-SNAPSHOT</version>
+  <version>0.2-SNAPSHOT</version>
   <packaging>jar</packaging>
 
-  <name>Jeran</name>
+  <name>jeran</name>
 
   <properties>
     <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
@@ -65,7 +65,7 @@
         <artifactId>jetty-maven-plugin</artifactId>
         <version>9.3.11.v20160721</version>
         <configuration>
-          <scanIntervalSeconds>10</scanIntervalSeconds>
+          <scanIntervalSeconds>3</scanIntervalSeconds>
           <webAppSourceDirectory>${jetty.resources}</webAppSourceDirectory>
           <webAppConfig>
             <contextPath>/jeran</contextPath>
